<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vehiclebackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VehicleDetailsActivity">

        <TextView
            android:id="@+id/viewMake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="142dp"
            android:layout_marginTop="0dp"
            android:text="MAKE"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/viewLicense"
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="138dp"
            android:layout_marginTop="62dp"
            android:background="@drawable/registrationplate"
            android:text="NUMBER"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="232dp"
            android:layout_marginTop="0dp"
            android:text="MODEL"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/viewYear"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="196dp"
            android:text="YEAR"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/labelPrice"
            android:layout_width="117dp"
            android:layout_height="31dp"
            android:layout_alignBottom="@+id/labelPrice"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="105dp"
            android:layout_marginBottom="0dp"
            android:text="@string/viewPrice"
            android:textColor="@android:color/holo_green_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/viewPrice"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="0dp"
            android:text="PRICE"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/labelColour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/labelColour"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="166dp"
            android:layout_marginBottom="0dp"
            android:text="@string/viewColour"
            android:textColor="@android:color/holo_green_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewColour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/viewColour"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="187dp"
            android:layout_marginBottom="0dp"
            android:text="COLOUR"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/labelMileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="281dp"
            android:text="@string/updateMileage"
            android:textColor="@android:color/holo_green_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewMileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/viewMileage"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="303dp"
            android:layout_marginBottom="0dp"
            android:text="MILEAGE"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/labelTransmission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/labelTransmission"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="221dp"
            android:layout_marginBottom="0dp"
            android:text="@string/viewTransmission"
            android:textColor="@android:color/holo_green_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewTransmission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/viewTransmission"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="248dp"
            android:layout_marginBottom="0dp"
            android:text="TRANSMISSION"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lablFuelType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lablFuelType"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="342dp"
            android:layout_marginBottom="0dp"
            android:text="@string/viewFuel"
            android:textColor="@android:color/holo_green_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewFuelType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/viewFuelType"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="364dp"
            android:layout_marginBottom="0dp"
            android:text="FUEL TYPE"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/labelEngineSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="398dp"
            android:text="@string/viewEngine"
            android:textColor="@android:color/holo_green_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewEngineSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/viewEngineSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="424dp"
            android:layout_marginBottom="0dp"
            android:text="ENGINE SIZE"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/labelDoors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="460dp"
            android:text="@string/viewDoors"
            android:textColor="@android:color/holo_green_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewDoors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="484dp"
            android:text="DOORS"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/labelCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="517dp"
            android:background="@android:color/background_light"
            android:text="@string/viewCondition"
            android:textColor="@android:color/holo_green_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/viewCondition"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="546dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/background_light"
            android:text="CONDITION"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/labelNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="582dp"
            android:background="@android:color/background_light"
            android:text="@string/viewNotes"
            android:textColor="@android:color/holo_green_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="609dp"
            android:background="@android:color/background_light"
            android:text="NOTES"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/carImage"
            android:layout_width="123dp"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/carlogo" />

    </RelativeLayout>
</ScrollView>